Tue Jul  5 13:49:26 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* addr2line.c: fix r32407 to check HAVE_ALLOCA_H.

Tue Jul  5 14:05:43 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httpauth/digestauth.rb (_authenticate):
	  Literal texts in HTTP ABNF is case-insensitive (RFC2616 2.1),
	  and a ample implementation in RFC2617 also ignores the case
	  of algorithms. So now this ignores those cases.
	  [ruby-dev:43965] [Feature #4936]

	* lib/webrick/httpauth/digestauth.rb (initialize):
	  Because of above, opera_hack is useless and removed.

Tue Jul  5 01:30:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread_pthread.c (native_sleep): cut the waiting time up to
	  100,000,000 because Solaris cond_timedwait() return EINVAL if an
	  argument is greater than current_time + 100,000,000.  This is
	  considered as a kind of spurious wakeup.  The caller to native_sleep
	  should care about spurious wakeup.

Tue Jul  5 01:24:26 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c: disable FIBER_USE_NATIVE on Solaris because resuming any
	  Fiber caused SEGV.  I haven't follow up the issue deeply, but it
	  works when disabling the feature.

Tue Jul  5 01:22:46 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* addr2line.c: include <alloca.h> to fix a build issue on Solaris.

Tue Jul  5 00:49:05 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/coverage/coverage.c: resurrect r32071 + add GC guard for
	  rb_coverages. [ruby-core:37352] [Bug #4927]
	  [ruby-core:36539] [Feature #4796]

	* test/coverage/test_coverage.rb resurrect r32071.

Mon Jul  4 22:24:46 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (get_stack): For NetBSD/FreeBSD, use
	  pthread_attr_getstack() if possible. and, remove an assumption
	  of stack growing direction.

Mon Jul  4 20:42:31 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/coverage/coverage.c: revert r32071.  The commit caused SEGV on
	  some minor nonfree OS.  I have no means of debugging the bug.  My