@@ -66,6 +66,11 @@ class TestRipper::ScannerEvents < Test::Unit::TestCase
                   [[2, 0], :on_tstring_content, "heredoc\n"],
                   [[3, 0], :on_heredoc_end, "EOS"]],
                  Ripper.lex("<<EOS\nheredoc\nEOS")
+    assert_equal [[[1, 0], :on_heredoc_beg, "<<EOS"],
+                  [[1, 5], :on_nl, "\n"],
+                  [[2, 0], :on_heredoc_end, "EOS"]],
+                 Ripper.lex("<<EOS\nEOS"),
+                 "bug#4543"
     assert_equal [[[1, 0], :on_regexp_beg, "/"],
                   [[1, 1], :on_tstring_content, "foo\nbar"],
                   [[2, 3], :on_regexp_end, "/"]],
@@ -653,6 +658,9 @@ class TestRipper::ScannerEvents < Test::Unit::TestCase
   def test_heredoc_end
     assert_equal [],
                  scan('heredoc_end', '')
+    assert_equal ["EOS"],
+                 scan('heredoc_end', "<<EOS\nEOS"),
+                 "bug#4543"
     assert_equal ["EOS"],
                  scan('heredoc_end', "<<EOS\nheredoc\nEOS")
     assert_equal ["EOS\n"],
